--- a/view/index.html
+++ b/view/index.html
@@ -25,6 +25,16 @@
     </div>
     <div class="container">
         <div class="ZipDatatable">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-md-10">
+                        <h3 class="panel-title"></h3>
+                    </div>
+                    <div class="col-md-2" align="right">
+                        <button type="button" name="add" id="addEmployee" class="btn btn-success btn-xs">Add Employee</button>
+                    </div>
+                </div>
+            </div>
             <table id="ZipcodesTable" class="table table-bordered table-sm">
                 <thead>
                     <tr>
