--- a/view/index.html
+++ b/view/index.html
@@ -17,7 +17,6 @@
 </head>
 
 <body class="bg-info">
-
     <div class="container">
         <div class="jumbotron">
             <h2>Datatables in action!</h2>
@@ -28,23 +27,21 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-md-10">
-                        <h3 class="panel-title"></h3>
+                        <h5 class="panel-title"></h5>
                     </div>
                     <div class="col-md-2" align="right">
-                        <button type="button" name="add" id="addEmployee" class="btn btn-success btn-xs">Add Employee</button>
+                        <button type="button" name="add" id="addEmployee" class="btn btn-success">Add Employee</button>
                     </div>
                 </div>
             </div>
             <table id="ZipcodesTable" class="table table-bordered table-sm">
                 <thead>
                     <tr>
-
                         <th>ID</th>
                         <th>City</th>
                         <th>Population</th>
                         <th>State</th>
                         <th>State</th>
-
                     </tr>
                 </thead>
                 <tbody></tbody>
@@ -61,9 +58,8 @@
             </table>
         </div>
     </div>
-
-
 </body>
+
 <script>
     // $(document).ready(function() {
     //     var data = [{
