--- a/view/index.html
+++ b/view/index.html
@@ -30,7 +30,7 @@
                         <h5 class="panel-title"></h5>
                     </div>
                     <div class="col-md-2" align="right">
-                        <button type="button" name="add" id="addEmployee" class="btn btn-success">Add Employee</button>
+                        <button type="button" name="add" id="addEmployee" class="btn btn-success" onclick="addFunction(123)">Add Employee</button>
                     </div>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                 <thead>
                     <tr>
                         <th>ID</th>
-                        <th>City</th>
+                        <th>Action</th>
                         <th>Population</th>
                         <th>State</th>
                         <th>State</th>
@@ -120,7 +120,7 @@
             }, {
                 'data': 'Action',
                 "defaultContent": "",
-                'name': 'City'
+                'name': 'Action'
             }, {
                 'data': 'Locale',
                 "defaultContent": "",
@@ -174,6 +174,11 @@
 
         // $('#ZipcodesTable').DataTable();
     });
+
+    function addFunction(val) {
+        console.log('addfun data = ' + val);
+        // document.getElementById("demo").style.color = "red";
+    }
 
     function editFunction(val) {
         console.log('editfun data = ' + val);
